feat: secure admin access and support competition schedules and news imports